2014-11-21  Jason Merrill  <jason@redhat.com>

	PR c++/63942
	* name-lookup.c (supplement_binding_1): Override a mangling alias.
	* mangle.c (maybe_remove_implicit_alias): New.
	(mangle_decl): Always avoid creating conflicting alias.
	* cp-tree.h: Adjust.

	PR c++/63849
	* mangle.c (decl_mangling_context): Use template_type_parameter_p.

	PR c++/63588
	* pt.c (uses_template_parms): Handle null argument.

2014-11-21  Jakub Jelinek  <jakub@redhat.com>

	PR target/63764
	* typeck.c (cp_build_array_ref): Adjust
	convert_vector_to_pointer_for_subscript caller.  If it returns true,
	call non_lvalue_loc on the result.

2014-11-20  Jason Merrill  <jason@redhat.com>

	PR c++/63658
	* pt.c (convert_nontype_argument): Call convert_from_reference.
	(check_instantiated_arg): Don't be confused by reference refs.
	(unify): Look through reference refs on the arg, too.
	* mangle.c (write_template_arg): Look through reference refs.

	* error.c (dump_expr): Avoid printing (*&i) for references.

2014-11-20  Ville Voutilainen  <ville.voutilainen@gmail.com>

	PR c++/63959
	* tree.c (trivially_copyable_p): Check for CP_TYPE_VOLATILE_P.

2014-11-20  Trevor Saunders  <tsaunders@mozilla.com>

	* cp-objcp-common.c: Use hash_table instead of htab.

2014-11-19  Jason Merrill  <jason@redhat.com>

	PR c++/56041
	* cp-tree.h (struct processing_template_decl_sentinel): New.
	* pt.c (instantiate_non_dependent_expr_internal): Split out from...
	(instantiate_non_dependent_expr_sfinae): Here.
	(convert_nontype_argument): Use them.
	* constexpr.c (fold_non_dependent_expr): Use them.

	PR c++/63885
	* constexpr.c (cxx_eval_constant_expression) [PARM_DECL]: Don't
	complain yet about a reference.
	[TARGET_EXPR]: Handle TARGET_EXPR with addr == true.
	[ADDR_EXPR]: Make sure we don't take the address of a CONSTRUCTOR.
	(cxx_bind_parameters_in_call): In the new scheme addr is always false.
	* typeck.c (build_address): Don't take the address of a CONSTRUCTOR.

	PR c++/57979